Freecell Solver's News File
===========================
Shlomi Fish <shlomif@cpan.org>
:Date: 2009-09-05
:Revision: $Id$

Version 3.14.0: (31-Oct-2012)
-----------------------------

1. Got the tests to pass with +cmake -DFCS_WITHOUT_DEPTH_FIELD=1+ by making
the library behave the same as without it. This also affected the behaviour of
+./fc-solve -l mo+ with attempting to solve Baker’s Dozen deals.

2. On UNIX platforms, +fc-solve+ now exits gracefully with the message
“Iterations count exceeded.”, upon receiving a SIGABRT signal. Can be
triggered by executing +pkill -ABRT fc-solve+.

3. The game states’ input routines now accept regular columns that start with
a leading colon (":"). As a result, one can input the states as output from
the solver with the +-p+ and +-t+ flags directly there.

4. Added a 6th BeFS weight (see the +-asw+ flag) of the inverse of the number
of cards not above parents. Using
+./freecell-solver-range-parallel-solve 1 32000 1 -p -t -sam --method a-star -to 0123467589 -asw 1,0,0,0,0,1 -sp r:tf -mi 100000+
appears to be interesting.

5. Allow test groups inside the +-to+ and +-dto+ flags to be ordered using
the +=asw(…)+ function and its parameters, based on the BeFS (Best-first
search) weights calculation.

6. Added the +-l amateur-star+ (or +-l as+ for short) preset, based on the
+=asw(…)+ ordering that is the fastest preset yet.

7. Added the +-l micro-finance+ (or +-l mf+ for short) preset, based on the
6th BeFS weight.

8. Implement a Prune for games whose columns cannot be filled by any card
(such as Baker’s Dozen), where moving the last card on a column to a
different column is pointless. For more information, see
http://tech.groups.yahoo.com/group/fc-solve-discuss/message/1121 .

9. In +dbm_fc_solver+ and +depth_dbm_fc_solver+, implement the “DeBondt”
encoding method for Freecell and Baker’s Dozen, which allows for an even more
compact representation of the encoded states.
