@@ -669,6 +669,7 @@ IF (MY_EXES_LINK_FLAGS)
 ENDIF (MY_EXES_LINK_FLAGS)
 
 CHECK_FUNCTION_EXISTS(pow HAVE_POW)
+CHECK_FUNCTION_EXISTS(strndup HAVE_STRNDUP)
 
 SET(AUTOGENERATED_CONFIG_H "config.h was auto-generated from config.h.in . Do not modify directly")
 
