@@ -30,11 +30,28 @@
 
 #include <string.h>
 
+#include "config.h"
+
 #include "move_funcs_order.h"
 #include "set_weights.h"
 
 #include "bool.h"
 #include "str_utils.h"
+#include "inline.h"
+
+#ifndef HAVE_STRNDUP
+static GCC_INLINE char * strndup(const char * s, size_t n)
+{
+    char * ret = strdup(s);
+
+    if (n < strlen(ret))
+    {
+        ret[n] = '\0';
+    }
+
+    return ret;
+}
+#endif
 
 int fc_solve_apply_tests_order(
     fcs_tests_order_t * tests_order,
