@@ -4,6 +4,9 @@ Shlomi Fish <shlomif@cpan.org>
 :Date: 2009-09-05
 :Revision: $Id$
 
+1. Fix the build on Windows with Dwimperl and its Mingw32 (+strndup()+
+was missing).
+
 Version 3.14.0: (31-Oct-2012)
 -----------------------------
 
